@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR

package UI <<Rectangle>>{
class "<<interface>>\nUi" as Ui
class "{abstract}\nUiPart" as UiPart
class UiManager
class MainWindow
class HelpWindow
class ResultDisplay
class PatientListPanel
class PatientCard
class CaringSessionsPanel
class CaringSessionCard
class StatusBarFooter
class CommandBox
}

package Model <<Rectangle>> {
class HiddenModel #FFFFFF
}

package Logic <<Rectangle>> {
class HiddenLogic #FFFFFF
}

class HiddenOutside #FFFFFF
HiddenOutside ..> Ui

UiManager .left.|> Ui
UiManager -down-> "1" MainWindow
MainWindow *-down->  "1" CommandBox
MainWindow *-down-> "1" ResultDisplay
MainWindow *-down-> "1" PatientListPanel
MainWindow *-down-> "1" CaringSessionsPanel
MainWindow *-down-> "1" StatusBarFooter
MainWindow --> "0..1" HelpWindow

PatientListPanel -down-> "*" PatientCard
CaringSessionsPanel -up-> "*" CaringSessionCard

MainWindow -left-|> UiPart

ResultDisplay --|> UiPart
CommandBox --|> UiPart
PatientListPanel --|> UiPart
PatientCard --|> UiPart
CaringSessionsPanel --|> UiPart
CaringSessionCard --|> UiPart
StatusBarFooter --|> UiPart
HelpWindow --|> UiPart

CaringSessionCard ..down..> Model
PatientCard ..down..> Model
UiManager -right-> Logic
MainWindow -left-> Logic

PatientListPanel -[hidden]left- HelpWindow
HelpWindow -[hidden]left- CommandBox
CommandBox -[hidden]left- ResultDisplay
ResultDisplay -[hidden]left- StatusBarFooter
StatusBarFooter -[hidden]left- CaringSessionsPanel

MainWindow -[hidden]-|> UiPart
@enduml
